# ttl26

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.cmake/: clang-18.cmake  clang.cmake
.devcontainer/: Dockerfile  devcontainer.json  extra.sh  get-docker.sh  init.el
include/: CMakeLists.txt
include/ttl/: ARROW.hpp  __fwd.hpp  bind.hpp  concepts.hpp  evaluate.hpp  expression.hpp  extents.hpp  formattable.hpp  index.hpp  index_mapper.hpp  index_string.hpp  outer.hpp  rank.hpp  scalar_type.hpp  sequence.hpp  std.hpp  std_traits.hpp  tensor.hpp  tensor_extents.hpp  tensor_index.hpp  tensor_traits.hpp  traits.hpp  tree.hpp  tspan.hpp  ttl.hpp
include/ttl/tree/: _extents_map.hpp  _index_mapper.hpp  assign.hpp  bind.hpp  execution_traits.hpp  negate.hpp  node.hpp  product.hpp  sum.hpp
modules/: ARROW.hpp  CMakeLists.txt  FWD.hpp  concepts.cpp  cstring.cpp  evaluate.cpp  extents.cpp  index.cpp  istring.cpp  main.cpp  rank.cpp  tensor.cpp  tensor_traits.cpp  tspan.cpp  ttl.cpp
modules/index/: cstring.cpp  imap.cpp  index.cpp  istring.cpp
modules/tensor/: evaluate.cpp  extents.cpp  outer.cpp  rank.cpp  tensor.cpp
modules/tree/: bind.cpp  expression.cpp  sum.cpp
tests/: CMakeLists.txt  assign.cpp  bind.cpp  concepts.cpp  index.cpp  main.cpp  sum.cpp  tensor.cpp  test.cpp  traits.cpp  tspan.cpp
